<resources>
    <string name="app_name">EmergencyApp</string>
    <string name="action_settings">Settings</string>

    <!-- MainActivity -->
    <string name="title_login">Login Screen</string>
    <string name="text_view_login">Login:</string>
    <string name="edit_text_login">Enter your login</string>
    <string name="text_view_password">Password:</string>
    <string name="edit_text_password">Enter your password</string>
    <string name="button_login">Log In!</string>

    <!-- HomeScreen -->
    <string name="button_emergency">EMERGENCY</string>
    <string name="button_medicaments">MEDICAMENTS</string>
    <string name="text_view_choice">Choose a section:</string>

    <!-- Emergency Detail Activity-->
    <string name="title_emergency_view">Current Emergency Object</string>
    <string name="title_emergency_edit">Edit Emergency Object</string>
    <string name="title_emergency_add">Adding Emergency Object</string>
    <string name="button_change">Change pattern</string>
    <string name="confirmation_message">Do you want to change pattern to selected one?</string>
    <string name="confirmation_title">Are you sure?</string>
    <string name="GPS_confirmation_title">GPS is disabled on this device.</string>
    <string name="GPS_confirmation_message">Would you like to enable it?</string>


    <!-- Emergency List Activity-->
    <string name="title_emergency_list">Available Patterns</string>
    <string name="button_add_pattern">Add new pattern</string>
    <string name="item_menu_edit">Edit</string>
    <string name="item_menu_delete">Delete</string>

    <!-- Emergency Edit Fragment -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_save">Save</string>
    <string name="confirmation_title1">Are you sure?</string>
    <string name="confirmation_message1">Do you really want to save this Pattern?</string>

    <!-- Bluetooth List Activity-->
    <string name="title_bluetooth">BLUETOOTH</string>
    <string name="text_view_paired_description">Click if you want to see list of paired devices: </string>
    <string name="button_connect_paired">Connect to paired</string>
    <string name="device_information_title">"Your phone will be connected to:</string>
    <string name="text_view_discover_description">Click if you want to see list of discovered devices: </string>
    <string name="button_discover">Discover BT devices</string>
    <string name="button_bt_confirm">Confirm</string>
    <string name="lack_of_BTmodule">"Bluetooth is not supported on this device</string>
</resources>
