<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="kolodziejczyk.olek.inzynierka.emergencyapp.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_login"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/text_view_login"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:visibility="visible"
        android:textColor="@color/Black"
        android:padding="2dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint="@string/edit_text_login"
        android:visibility="visible"
        android:textColor="@color/Grey"
        android:singleLine="true"
        android:id="@+id/edit_text_login" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="5dp"
        android:text="@string/text_view_password"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/text_view_password"
        android:visibility="visible"
        android:textColor="@color/Black"
        android:padding="2dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint="@string/edit_text_password"
        android:visibility="visible"
        android:textColor="@color/Grey"
        android:singleLine="true"
        android:inputType="textPassword"
        android:id="@+id/edit_text_password"/>
    <Button
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:layout_gravity="center_horizontal"
        android:id="@+id/button_login" />


</LinearLayout>
